--- a/pweb_nuxt/assets/styles.css
+++ b/pweb_nuxt/assets/styles.css
@@ -292,6 +292,12 @@ section {
    flex: 1 1 150rem;
  }
 
+ .about-page .image-container {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 150rem;
+    flex: 1 1 150rem;
+  }
+
 .about .video-container video {
   border-radius: 1rem;
   width: 100%;
@@ -302,12 +308,22 @@ section {
     width: 50%;
   }
 
+.about-page .image-container img {
+    border-radius: 1rem;
+    width: 50%;
+  }
+
 .about .video-container .controls {
   text-align: center;
   padding: 2rem 0;
 }
 
 .about-page .video-container .controls {
+    text-align: center;
+    padding: 2rem 0;
+  }
+
+  .about-page .image-container .controls {
     text-align: center;
     padding: 2rem 0;
   }
@@ -332,11 +348,25 @@ section {
     margin: .7rem;
   }
 
+  .about-page .image-container .controls span {
+    display: inline-block;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+    background: #000;
+    cursor: pointer;
+    margin: .7rem;
+  }
+
 .about .video-container .controls span:hover {
   background: #d9296f;
 }
 
 .about-page .video-container .controls span:hover {
+    background: #d9296f;
+  }
+
+  .about-page .image-container .controls span:hover {
     background: #d9296f;
   }
 
@@ -450,6 +480,7 @@ section {
   background: #fff;
   box-shadow: rgb(17 17 17 / 15%) 0px 0.5rem 1rem;
 }
+  
 
 .destination .box-container .box:hover img {
   -webkit-transform: scale(1.1);
@@ -499,8 +530,75 @@ section {
   padding-right: .5rem;
 }
 
+.teams .box-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(27rem, 1fr))[auto-fit];
+  grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+  gap: 1rem;
+  margin: 0 auto;
+  max-width: 1000px;
+  margin-bottom: 3rem;
+}
+
+.teams .box-container .box {
+  border-radius: 1rem;
+  overflow: hidden;
+  width: 100%; /* Make each box take the full width of the container */
+  max-width: 230px; /* Set a maximum width for each box */
+  background: #fff;
+  box-shadow: rgb(17 17 17 / 15%) 0px 0.5rem 1rem;
+  margin: 0 auto;
+}
 
 
+.teams .box-container .box:hover img {
+-webkit-transform: scale(1.1);
+transform: scale(1.1);
+}
+
+.teams .box-container .box .image {
+height: 20rem;
+overflow: hidden;
+width: 100%;
+}
+
+.teams .box-container .box .image img {
+height: 100%;
+width: 100%;
+-o-object-fit: cover;
+object-fit: cover;
+}
+
+.teams .box-container .box .content {
+padding: 2rem;
+text-align: center;
+}
+
+.teams .box-container .box .content h3 {
+font-size: 2rem;
+color: #000;
+}
+
+.teams .box-container .box .content p {
+padding: 1rem 0;
+font-size: 1.4rem;
+color: #3d3d3d;
+line-height: 2;
+}
+
+.teams .box-container .box .content a {
+font-size: 1.7rem;
+color: #d9296f;
+}
+
+.teams .box-container .box .content a:hover i {
+padding-left: 1rem;
+}
+
+.teams .box-container .box .content a i {
+padding-right: .5rem;
+}
 
 
 .gallery .box-container {
@@ -919,3 +1017,88 @@ section {
     font-size: 2.7rem;
   }
 }
+
+
+/* Container styles for the contact form */
+.container-contact {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  
+  /* Contact Form styles */
+  .contact {
+    padding: 3rem 0;
+  }
+  
+  .heading-contact {
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 4rem;
+    color: #000;
+  }
+
+  .heading-contact h2{
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 4rem;
+    color: #000;
+  }
+  
+  .contact-form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .form-contact {
+    margin-bottom: 1.5rem;
+  }
+
+  .card-contact {
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0.5rem 1rem rgba(17, 17, 17, 0.1);
+    padding: 2rem;
+  }
+  
+  label {
+    font-size: 1.6rem;
+    color: #3d3d3d;
+  }
+  
+  input,
+  textarea {
+    width: 100%;
+    padding: 1rem;
+    margin-top: 0.5rem;
+    border-radius: 5px;
+    border: 0.1rem solid #d9296f;
+    font-size: 1.6rem;
+    color: #3d3d3d;
+  }
+  
+  textarea {
+    resize: vertical;
+  }
+  
+  
+  /* Responsive Styles */
+  @media (max-width: 768px) {
+    .container-contact {
+      padding: 0 1.5rem;
+    }
+  
+    input,
+    textarea {
+      font-size: 1.4rem;
+    }
+  }
+  
+  @media (max-width: 450px) {
+    input,
+    textarea {
+      font-size: 1.2rem;
+    }
+  }
+
+
+
